fix history card view on mobiles

--- a/src/assets/sass/paper/_fixes.scss
+++ b/src/assets/sass/paper/_fixes.scss
@@ -6,6 +6,10 @@
   overflow-x: auto !important;
 }
 
-.fix-no__margin{
+.fix-history__card{
+  .content{
+    margin-bottom: 0;
+  }
+
   margin-bottom: 0;
 }
